apps/plex-new/plex.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:1.43.4.10903-e5521bd8c-ls326 # {"$imagepolicy":"flux-system:plex"}
        ports:
        - containerPort: 32400
          name: plex
        volumeMounts:
        - mountPath: /config
          name: plex-config
        - mountPath: /media
          name: plex-media
          readOnly: true
        - mountPath: /downloads
          name: plex-downloads
          readOnly: true
        - mountPath: /dev/dri
          name: dri
        securityContext:
          privileged: true
      volumes:
      - name: plex-config
        persistentVolumeClaim:
          claimName: plex-config-pvc
      - name: plex-media
        persistentVolumeClaim:
          claimName: plex-media-pvc
      - name: plex-downloads
        persistentVolumeClaim:
          claimName: plex-downloads-pvc
      - name: dri
        hostPath:
          path: /dev/dri
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  selector:
    app: plex
  ports:
  - port: 32400
    targetPort: 32400
    name: plex
