apps/plex-new/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: plex.erix-homelab.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: plex
            port:
              number: 32400
  tls:
    - secretName: erix-homelab-site-tls
      hosts:
        - plex.erix-homelab.site
